--- a/web/app/themes/brocooly/languages/ru_RU.po
+++ b/web/app/themes/brocooly/languages/ru_RU.po
@@ -1,14 +1,14 @@
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Brocooly\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-02-09 20:05+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: \n"
-"Language: \n"
-"Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
+"POT-Creation-Date: 2022-02-09 20:01+0000\n"
+"PO-Revision-Date: 2022-02-09 20:06+0000\n"
+"Last-Translator: \n"
+"Language-Team: Russian\n"
+"Language: ru_RU\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10 >= 2 && "
+"n%10<=4 &&(n%100<10||n%100 >= 20)? 1 : 2);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -18,20 +18,20 @@ msgstr ""
 
 #. Author of the theme
 msgid "Aliakseyenka Ihar "
-msgstr ""
+msgstr "Алексеенко Игорь"
 
 #: resources/views/example.twig:28
 #, php-format
 msgid "Brocket Framework v%s"
-msgstr ""
+msgstr "Brocket Framework версия %s"
 
 #. Name of the theme
 msgid "Brocooly"
-msgstr ""
+msgstr "Brocooly"
 
 #: resources/views/layouts/app.twig:13
 msgid "Brocooly Framework"
-msgstr ""
+msgstr "Brocooly Framework"
 
 #. Description of the theme
 msgid ""
@@ -39,53 +39,56 @@ msgid ""
 "and Wpemerge solutions for WordPress themes development with Bedrock folder "
 "structure"
 msgstr ""
+"Фреймворк для разработчиков тем на WordPress на основе Timber и WPEmerge, "
+"вдохновленный Laravel"
 
 #: resources/views/example.twig:37
 msgid "Documentation"
-msgstr ""
+msgstr "Документация"
 
 #: resources/views/example.twig:68
 #, php-format
 msgid "Hello %s!"
-msgstr ""
+msgstr "Привет, %s!"
 
 #. URI of the theme
+#| msgid "https://czernika.github.io/brocooly/"
 msgid "https://czernika.github.io/brocket-docs/"
-msgstr ""
+msgstr "https://czernika.github.io/brocket-docs/"
 
 #: resources/views/example.twig:62
 msgid "Login"
-msgstr ""
+msgstr "Войти"
 
 #: src/Http/Controllers/PageController.php:42
 msgid "Page was not found"
-msgstr ""
+msgstr "Страница не найдена"
 
 #: src/Http/Controllers/PageController.php:41
 msgid "Please provide appropriate template for this request"
-msgstr ""
+msgstr "Предоставьте подходящий шаблон для данного запроса"
 
 #: src/Http/Controllers/PageController.php:43
 #: resources/views/layouts/error.twig:10
 msgid "Server error"
-msgstr ""
+msgstr "Ошибка сервера"
 
 #: src/Http/Controllers/PageController.php:44
 msgid "There has been a critical error on this website"
-msgstr ""
+msgstr "На сайте произошла критическая ошибка"
 
 #: resources/views/example.twig:49
 msgid "Timber"
-msgstr ""
+msgstr "Timber"
 
 #: resources/views/example.twig:43
 msgid "WordPress"
-msgstr ""
+msgstr "WordPress"
 
 #: resources/views/example.twig:55
 msgid "WPEmerge"
-msgstr ""
+msgstr "WPEmerge"
 
 #: resources/views/example.twig:31
 msgid "You can find this file at `resources/views/example.twig`"
-msgstr ""
+msgstr "Вы можете найти этот шаблон по пути `resources/views/example.twig`"
